# luxo_jr

./: .gitignore  README.md  notes.md  requirements.txt
analysis/: leg_dynamic_2d.m  leg_dynamic_3d.m  leg_dynamic_3d_animation.m
analysis/diagram/: 2d_analysis.ai  top_view.ai
analysis/utils/: getAngles_Y_then_Z.m  two_points_line.m  two_points_line3.m
install/: local_setup.sh  setup.sh
install/interfaces/share/interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/interfaces/share/interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_interfaces__rosidl_generator_pyExport.cmake  export_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  interfacesConfig-version.cmake  interfacesConfig.cmake  interfaces__rosidl_typesupport_cExport.cmake  interfaces__rosidl_typesupport_introspection_cExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/interfaces/share/interfaces/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/interfaces/share/interfaces/msg/: MotorCmds.idl  MotorCmds.json  MotorCmds.msg
install/realsense2_camera/include/: align_depth_filter.h  base_realsense_node.h  constants.h  dynamic_params.h  gl_window.h  image_publisher.h  named_filter.h  pointcloud_filter.h  profile_manager.h  realsense_node_factory.h  ros_node_base.h  ros_param_backend.h  ros_sensor.h  ros_utils.h  sensor_params.h
install/realsense2_camera/lib/realsense2_camera/: predict_node.py  realsense2_camera_node  realsense2_frame_latency_node
install/realsense2_camera/share/realsense2_camera/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/realsense2_camera/share/realsense2_camera/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  realsense2_cameraConfig-version.cmake  realsense2_cameraConfig.cmake
install/realsense2_camera/share/realsense2_camera/config/: global_settings.yaml
install/realsense2_camera/share/realsense2_camera/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/realsense2_camera/share/realsense2_camera/launch/: default.rviz  rs_intra_process_demo_launch.py  rs_launch.py  rs_multi_camera_launch.py  (+1 more)
install/realsense2_camera_msgs/share/realsense2_camera_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/realsense2_description/share/realsense2_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/servo/share/servo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/camera/: CMakeLists.txt  README.md  package.xml  setup.py
src/camera/camera/: __init__.py
src/camera/camera/nodes/: __init__.py
src/camera/nodes/: predict_node.py
src/detection/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/detection/detection/detection/: __init__.py
src/detection/detection/nodes/: listen_node.py
src/detection/scripts/: listen_node  predict_node  predict_node.py
src/dynamixel_sdk_custom_interfaces/: CHANGELOG.rst  package.xml
src/dynamixel_sdk_examples/: CHANGELOG.rst  package.xml
src/dynamixel_sdk_examples/src/: read_write_node.cpp  read_write_node.py
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: MotorCmds.msg
src/realsense-ros/realsense2_camera/: CMakeLists.txt  setup.cfg  setup.py
src/realsense-ros/realsense2_camera/scripts/: predict_node.py
src/realsense-ros/yolo-hand-detection/: demo.py
src/robot_launch/: README.md  package.xml  setup.cfg  setup.py
src/robot_launch/launch/: detection.launch.py
src/servo/scripts/: lamp_robot.py  motor_node.py  motor_node_old.py  motor_node_old2.py  motor_node_withIK3.py
src/servo_old/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/servo_old/scripts/: .motor_node.py.swp  motor_node.py
(+259 files in other folders)
