<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_launch</name>
  <version>0.0.1</version>
  <description>Central launch files for the robot system, including camera + detection and other configurations.</description>
  <maintainer email="jimmy@example.com">jimmy</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>detection</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
