<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>servo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jimmyyang@ucla.edu">jimmy</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend> <!-- ADDED -->

  <depend>eigen</depend>
  <depend>builtin_interfaces</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend> <!-- ADDED -->
  <!-- Lifecycle dependencies are optional -DUSE_LIFECYCLE_NODE -->
  <depend>rclcpp_lifecycle</depend>
  <depend>lifecycle_msgs</depend>

  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>diagnostic_updater</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend condition="$ROS_DISTRO != foxy">ament_cmake_gtest</test_depend>
  <test_depend condition="$ROS_DISTRO != foxy">launch_testing</test_depend>
  <test_depend condition="$ROS_DISTRO != foxy">ament_cmake_pytest</test_depend>
  <test_depend condition="$ROS_DISTRO != foxy">launch_pytest</test_depend>
  <test_depend condition="$ROS_DISTRO != foxy">sensor_msgs_py</test_depend>
  <test_depend condition="$ROS_DISTRO != foxy">python3-numpy</test_depend>
  <test_depend condition="$ROS_DISTRO != foxy">python3-tqdm</test_depend>
  <test_depend condition="$ROS_DISTRO != foxy">sensor_msgs_py</test_depend>
  <test_depend condition="$ROS_DISTRO != foxy">python3-requests</test_depend>
  <test_depend condition="$ROS_DISTRO != foxy">tf2_ros_py</test_depend>
  <test_depend condition="$ROS_DISTRO != foxy">ros2topic</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>rviz</exec_depend> <!-- ADDED -->
  <exec_depend>xacro</exec_depend> <!-- ADDED -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

